--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "express": "^4.13.3",
-    "mongoose": "^4.5.10"
+    "mongoose": "^4.5.10",
+    "mongoose-auto-increment": "^5.0.1",
+    "mongoose-autoincrement": "^1.0.0"
   },
   "engines": {
     "node": "4.0.0"
