--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.13.3",
     "express-ejs-layouts": "^2.2.0",
     "mongoose": "^4.5.10",
