--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js-sample",
-  "version": "0.2.0",
-  "description": "A sample Node.js app using Express 4",
+  "name": "meme-generator",
+  "version": "0.1.0",
+  "description": "A simple web app to generate random and static memes.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -20,16 +20,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-sample"
+    "url": "https://github.com/chuck-aka-ben/meme-generator"
   },
   "keywords": [
     "node",
     "heroku",
     "express"
   ],
-  "author": "Mark Pundsack",
-  "contributors": [
-    "Zeke Sikelianos <zeke@sikelianos.com> (http://zeke.sikelianos.com)"
-  ],
+  "author": "Benjamin Thomas <benjamin@network.net>",
   "license": "MIT"
 }
