--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "ejs": "^2.5.1",
     "express": "^4.13.3",
     "express-ejs-layouts": "^2.2.0",
+    "lodash": "^4.15.0",
     "mongoose": "^4.5.10",
     "mongoose-auto-increment": "^5.0.1",
-    "mongoose-autoincrement": "^1.0.0"
+    "mongoose-autoincrement": "^1.0.0",
+    "request": "^2.74.0"
   },
   "engines": {
     "node": "4.0.0"
