--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "caption": "^0.1.1",
     "ejs": "^2.5.1",
     "express": "^4.13.3",
     "express-ejs-layouts": "^2.2.0",
