--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^2.5.1",
     "express": "^4.13.3",
     "express-ejs-layouts": "^2.2.0",
+    "file-exists": "^2.0.0",
     "lodash": "^4.15.0",
     "mongoose": "^4.5.10",
     "mongoose-auto-increment": "^5.0.1",
