--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "async": "^2.0.1",
+    "bluebird": "^3.4.5",
     "body-parser": "^1.15.2",
     "caption": "^0.1.1",
     "ejs": "^2.5.1",
