--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "meme-generator",
   "version": "0.1.1",
+  "engines": {
+    "node": "v10.15.3"
+  },
   "description": "A simple web app to generate random and static memes.",
   "main": "app.js",
   "scripts": {
