--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meme-generator",
   "version": "0.1.1",
   "engines": {
-    "node": "v10.15.3"
+    "node": "10.x"
   },
   "description": "A simple web app to generate random and static memes.",
   "main": "app.js",
@@ -25,9 +25,6 @@
     "redis": "^2.6.2",
     "redlock": "^2.0.0",
     "request": "^2.74.0"
-  },
-  "engines": {
-    "node": "4.0.0"
   },
   "repository": {
     "type": "git",
